--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -6,5 +6,6 @@
 @import "component/footer";
 @import "component/navigation";
 @import "component/buttons";
+@import "component/contact-form-style";
 
-@import "layout/home-main";
+@import "layout/pages-main";
