--- a/sass/layout/_home-main.scss
+++ b/sass/layout/_home-main.scss
@@ -1,19 +1,5 @@
-$bg-overlay: rgba(0, 0, 0, 0.2);
-$primary-color: #8C225D;
-$h-font: 'Karla',  sans-serif;
-
-@mixin bg-img($url, $repeat, $size) {
-  background-image: url($url);
-  background-repeat: $repeat;
-  background-size: $size;
-}
-
-@mixin flex($display, $flow, $j-content, $a-items) {
-  display: $display;
-  flex-flow: $flow;
-  justify-content: $j-content;
-  align-items: $a-items;
-}
+@import "../base/variables";
+@import "../base/mixins";
 
 body {
   #deskintro {
