--- a/sass/component/_buttons.scss
+++ b/sass/component/_buttons.scss
@@ -14,5 +14,13 @@ body {
         width: 90%;
         @include buttons ($button-primary, $button-primary, $button-hover, $button-hover)
         }
+
+        .form-button {
+
+          #send-button {
+            width: 100%;
+            margin: 0 auto;
+          }
+          }
+        }
     }
-  }
