--- a/sass/component/_contact-form-style.scss
+++ b/sass/component/_contact-form-style.scss
@@ -1,22 +1,26 @@
-
 #form-container {
   max-width: 90%;
   height: auto;
   margin: 0 auto;
 
-    .controls {
-      .form-control {
-        font-size: 0.9rem;
-      }
-      .form-group {
-        margin-bottom: 10px;
-        .help-block, .with-errors, .form-group, .has-error, .has-danger {
-          li {
-            font-size: 0.8rem;
-            padding-left: 5px;
-          }
+  .controls {
+    .form-control {
+      font-size: 0.9rem;
+    }
 
+    .form-group {
+      margin-bottom: 10px;
+      
+      .form-group,
+      .has-danger,
+      .has-error,
+      .help-block,
+      .with-errors {
+        li {
+          font-size: 0.8rem;
+          padding-left: 5px;
         }
       }
     }
   }
+}
