--- a/sass/main.css
+++ b/sass/main.css
@@ -46,7 +46,7 @@ footer {
   footer .fab {
     font-size: 1.25rem;
     color: #AC88AD;
-    margin: 0 10px; }
+    margin: 0 10px 16px 10px; }
 
 body {
   background-image: none;
@@ -60,8 +60,7 @@ body {
   justify-content: flex-start;
   align-items: stretch; }
   body main .button-container {
-    margin: 0 auto;
-    margin-top: 25px;
+    margin: 25px auto 0;
     width: 90%; }
     body main .button-container #cta-button {
       background-color: #E345A2;
@@ -69,7 +68,30 @@ body {
       body main .button-container #cta-button:hover {
         background-color: #CF3F94;
         border-color: #CF3F94; }
+  body main .form-button #send-button {
+    background-color: #E345A2;
+    border-color: #E345A2; }
+    body main .form-button #send-button:hover {
+      background-color: #CF3F94;
+      border-color: #CF3F94; }
+  body main .form-button #send-button {
+    width: 100%;
+    margin: 0 auto; }
 
+/*TABLET PORTRAIT*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) {
+  main .button-container {
+    padding: 30px 150px 10px 150px; }
+  main .form-button #send-button {
+    width: 100%;
+    margin: 0 auto; } }
+/*DESKTOP*/
+@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+  main .button-container {
+    padding: 15px 20px 0 20px; }
+  main .form-button #send-button {
+    width: 100%;
+    margin: 0 auto; } }
 /* COLORS */
 /* FOOTER */
 /* BACKGROUND */
@@ -107,7 +129,7 @@ body {
       body main #intro #intro-overlay {
         max-width: 100%;
         height: 600px;
-        background-color: rgba(0, 0, 0, 0.2);
+        background-color: rgba(0, 0, 0, 0.15);
         text-align: center;
         display: table; }
         body main #intro #intro-overlay h1 {
@@ -168,7 +190,7 @@ body {
     align-items: stretch; }
     body main #intro {
       height: 670px;
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: rgba(0, 0, 0, 0.15);
       display: flex;
       flex-flow: row nowrap;
       justify-content: flex-end;
@@ -221,7 +243,7 @@ body {
             display: none;
             width: 100%;
             height: 620px;
-            background-color: rgba(0, 0, 0, 0.2); }
+            background-color: rgba(0, 0, 0, 0.15); }
             html body main #intro #intro-overlay #mob-intro {
               display: none !important; }
           html body main #intro #deskintro {
