--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -1,9 +1,11 @@
+/*background image */
 @mixin bg-img($url, $repeat, $size) {
   background-image: url($url);
   background-repeat: $repeat;
   background-size: $size;
 }
 
+/*flexbox */
 @mixin flex($display, $flow, $j-content, $a-items) {
   display: $display;
   flex-flow: $flow;
@@ -11,10 +13,20 @@
   align-items: $a-items;
 }
 
+/*links */
+@mixin links($color, $vcolor, $hcolor, $acolor) {
+  color: $color;
+    &:visited { color: $vcolor;}
+    &:hover { color: $hcolor;}
+    &:active { color: $acolor;}
+}
+
+/*primary button*/
 @mixin buttons ($primary, $p-border, $hover, $h-border) {
   #cta-button {
     background-color: $primary;
     border-color: $p-border;
+
     &:hover {
       background-color: $hover;
       border-color: $h-border;
@@ -22,14 +34,15 @@
   }
 }
 
-
+/*submit/success button */
 @mixin success-buttons ($sprimary, $sp-border, $shover, $sh-border) {
-#send-button {
-  background-color: $sprimary;
-  border-color: $sp-border;
-  &:hover {
-    background-color: $shover;
-    border-color: $sh-border;
+  #send-button {
+    background-color: $sprimary;
+    border-color: $sp-border;
+
+    &:hover {
+      background-color: $shover;
+      border-color: $sh-border;
+    }
   }
-}
 }
