--- a/sass/layout/_home-main.scss
+++ b/sass/layout/_home-main.scss
@@ -172,7 +172,7 @@ body {
 }
 
 /*DESKTOP HI-RES*/
-@media only screen and (min-width: 1281px) {
+@media only screen and (min-width: 1281px) and (max-width: 2500px) {
 
 html {
   max-width: 100vw;
