--- a/sass/main.css
+++ b/sass/main.css
@@ -2,14 +2,23 @@
 /* FOOTER */
 /* BACKGROUND */
 /* BUTTONS */
+/*background image */
+/*flexbox */
+/*links */
+/*primary button*/
+/*submit/success button */
 /* COLORS */
 /* FOOTER */
 /* BACKGROUND */
 /* BUTTONS */
 #mobnav {
-  background-color: rgba(140, 34, 93, 0.8) !important; }
+  background-color: rgba(140, 34, 93, 0.92) !important; }
   #mobnav .navbar-brand {
-    color: white; }
+    color: white;
+    margin-right: 0px; }
+    #mobnav .navbar-brand img {
+      width: 20%;
+      margin-right: 20px; }
   #mobnav .navbar-toggler {
     color: white;
     border-color: rgba(0, 0, 0, 0); }
@@ -35,7 +44,7 @@ footer {
   height: auto;
   margin: 0 auto;
   bottom: 0;
-  padding: 20px 10px 10px 10px;
+  padding: 20px 10px 10px;
   font-size: 0.8rem;
   text-align: center;
   line-height: 2;
@@ -43,10 +52,20 @@ footer {
   color: white; }
   footer a {
     color: #AC88AD; }
+    footer a:visited {
+      color: #AC88AD; }
+    footer a:hover {
+      color: #330d22; }
+    footer a:active {
+      color: #ca9ab5; }
+  footer .phonenum {
+    color: #fff; }
   footer .fab {
     font-size: 1.25rem;
     color: #AC88AD;
-    margin: 0 10px 16px 10px; }
+    margin: 0 10px 16px; }
+    footer .fab:hover {
+      color: #330d22; }
 
 body {
   background-image: none;
@@ -96,6 +115,11 @@ body {
 /* FOOTER */
 /* BACKGROUND */
 /* BUTTONS */
+/*background image */
+/*flexbox */
+/*links */
+/*primary button*/
+/*submit/success button */
 body {
   max-width: 640px;
   min-width: 320px;
@@ -217,7 +241,7 @@ body {
       body #testimonials .carousel-inner .carousel-item {
         width: 60%; } }
 /*DESKTOP HI-RES*/
-@media only screen and (min-width: 1281px) {
+@media only screen and (min-width: 1281px) and (max-width: 2500px) {
   html {
     max-width: 100vw;
     margin: 0 auto; }
