--- a/sass/pages.css
+++ b/sass/pages.css
@@ -126,6 +126,14 @@ body {
     #form-container .controls .form-group .with-errors li {
       font-size: 0.8rem;
       padding-left: 5px; }
+  #form-container .controls #submit {
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center; }
+    #form-container .controls #submit .g-recaptcha {
+      margin: 0 auto; }
 
 body {
   background-image: none;
