--- a/sass/component/_contact-form-style.scss
+++ b/sass/component/_contact-form-style.scss
@@ -22,7 +22,7 @@
         }
       }
     }
-    #submit {
+    #submit-container {
       width: 100%;
       @include flex(flex, column nowrap, flex-start, center);
       .g-recaptcha {
