--- a/sass/pages.css
+++ b/sass/pages.css
@@ -41,15 +41,15 @@
 /* BUTTONS */
 footer {
   width: 100%;
-  height: auto;
+  height: 174px;
   margin: 0 auto;
   bottom: 0;
   padding: 20px 10px 10px;
   font-size: 0.8rem;
   text-align: center;
   line-height: 2;
-  background-color: #7B4C73;
-  color: white; }
+  background-color: #F8F9F9;
+  color: #5e3858; }
   footer a {
     color: #AC88AD; }
     footer a:visited {
@@ -59,7 +59,7 @@ footer {
     footer a:active {
       color: #ca9ab5; }
   footer .phonenum {
-    color: #fff; }
+    color: #5e3858; }
   footer .fab {
     font-size: 1.25rem;
     color: #AC88AD;
@@ -69,7 +69,7 @@ footer {
 
 body {
   background-image: none;
-  background-color: #F4F6F7;
+  background-color: #F8F9F9;
   max-width: 640px;
   min-width: 320px;
   height: auto;
@@ -132,15 +132,22 @@ body {
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: center; }
-    #form-container .controls #submit-container .g-recaptcha {
-      margin: 0 auto; }
 
+/* COLORS */
+/* FOOTER */
+/* BACKGROUND */
+/* BUTTONS */
+/*background image */
+/*flexbox */
+/*links */
+/*primary button*/
+/*submit/success button */
 body {
   background-image: none;
-  background-color: #F4F6F7;
+  background-color: white;
   max-width: 640px;
   min-width: 320px;
-  height: auto;
+  min-height: calc(100vh - 174px);
   margin: 0 auto;
   display: flex;
   flex-flow: column nowrap;
