got rid of hi-res layout, centered captcha, tried to fix contact form

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 /* COLORS */
-$primary-color: #8C225D;
-$nav-color: rgba(140, 34, 93, 0.92);
+$primary-color: #A0186C;
+$nav-color: rgba(159, 24, 108, 0.92);
 
 /* FOOTER */
 $footer-purple: #7B4C73;
