--- a/sass/layout/_pages-main.scss
+++ b/sass/layout/_pages-main.scss
@@ -115,7 +115,7 @@ body {
 
 
 /*DESKTOP*/
-@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+@media only screen and (min-width: 1025px) and (max-width: 2500px) {
 
   body {
     max-width: 1280px;
@@ -185,7 +185,7 @@ body {
 }
 
 
-/*DESKTOP HI-RES*/
+/*DESKTOP HI-RES
 @media only screen and (min-width: 1281px) and (max-width: 2500px) {
 
   body {
@@ -246,5 +246,5 @@ body {
         }
       }
     }
-  }
-}
+  }s
+}*/
