changed nav colours

--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -9,7 +9,7 @@ footer {
   font-size: 0.8rem;
   text-align: center;
   line-height: 2;
-  background-color: $pages-bgcolor;
+  background-color: #f6f6f6;
   color: #5e3858;
 
   a {
