--- a/sass/layout/_pages-main.scss
+++ b/sass/layout/_pages-main.scss
@@ -3,7 +3,7 @@
 
 body {
   background-image: none;
-  background-color: white;
+  background-color: #fff;
   max-width: 640px;
   min-width: 320px;
   min-height: calc(100vh - 174px);
@@ -11,14 +11,34 @@ body {
   @include flex(flex, column nowrap, flex-start, stretch);
 
   #mobnav {
-    background-color: $primary-color !important;
+    background-color: $nav-color !important;
+    border-bottom: 1px solid #f6f6f6;
+    .navbar-brand {
+      color: white;
+    }
+    .navbar-toggler {
+      color: white;
+      border-color: rgba(0, 0, 0, 0);
+      .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(255, 255, 255)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+      }
+    }
+
+    #navbarNavAltMarkup {
+      a.nav-item.nav-link.active {
+        color: white;
+      }
+
   }
+}
+
 
   main {
     width: 100%;
     height: auto;
     margin: 0 auto;
     padding: 25px 0;
+
 
     .p-content {
       width: 100%;
@@ -121,6 +141,28 @@ body {
     max-width: 1280px;
     min-width: 1025px;
 
+    #mobnav {
+      background-color: rgba(0, 0, 0, 0) !important;
+      border-bottom: 1px solid #f6f6f6;
+      .navbar-brand {
+        color: $nav-color;
+      }
+      .navbar-toggler {
+        color: $nav-color;
+        border-color: rgba(0, 0, 0, 0);
+        .navbar-toggler-icon {
+          background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(159, 24, 108)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+        }
+      }
+
+      #navbarNavAltMarkup {
+        a.nav-item.nav-link.active {
+          color: $nav-color;
+        }
+
+    }
+  }
+
     main {
       width: 100%;
       min-height: 768px;
@@ -147,12 +189,12 @@ body {
 
         .p-left {
           display: block;
-          width: 50%;
+          width: 55%;
           min-height: 100%;
           flex: 1 1 50%;
         }
         .p-text {
-          max-width: 50%;
+          max-width: 45%;
           height: 100%;
           overflow-y: scroll;
           text-align: justify;
